--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.10.0",
     "lodash": "^4.17.21",
     "next": "13.5.4",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18"
   },
