--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.10.0",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "next": "13.5.4",
     "numeral": "^2.0.6",
