--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.0",
     "lodash": "^4.17.21",
     "next": "13.5.4",
