--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.0",
     "date-fns": "^2.30.0",
+    "i18next": "^23.6.0",
     "lodash": "^4.17.21",
     "next": "13.5.4",
     "numeral": "^2.0.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^13.3.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
