--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,6 @@ server {
     # Additional configurations for file serving, logging, etc.
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
 }
